_sass/base/_global.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background: $background-color;
}

::selection {
  background: $selection-color;
}
::-moz-selection {
  background: $selection-color;
}

body {
  color: $text-color;
  font-family: $font-family-main;
  font-size: $font-size;
  word-wrap: break-word;
  background: $background-color;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $font-family-headings;
  line-height: 1.3;
  margin: 0.67em 0;
  a { color: $text-color; }
}
h1 { font-size: 2.5em; }
h2 { font-size: 2em; }
h3 { font-size: 1.5em; }
h4 { font-size: 1.15em; }

blockquote {
  border-left: 2px solid $link-color;
  padding: 1em 1em;
  color: rgba(226,232,240,0.8);
}
blockquote p:last-child,
footer p:last-child {
  margin-bottom: 0;
}

table { table-layout: fixed; width: 100%; word-wrap: break-word; }
td, th {
  padding: 0.5em 1em;
  border: 1px solid $border-color;
  text-align: left;
}

table, dl, blockquote, code, kbd, pre, samp { margin: 1em 0; }

pre {
  padding: 1em;
  background: rgba(255,255,255,0.04);
  border: 1px solid $border-color;
  border-radius: 6px;
  font-family: $font-family-mono;
}

code {
  font-family: $font-family-mono;
  background: rgba(167,139,250,0.1);
  padding: 0.15em 0.4em;
  border-radius: 4px;
  font-size: 0.9em;
}

dt { font-weight: bold; }
dd { margin-left: 2em; }

p, ol, ul, dl, .math-display {
  line-height: 1.7;
  margin-bottom: 1em;
}

.math-display { display: inline-block; width: 100%; }

ol, ul { list-style-position: inside; }

hr {
  border: 0;
  border-top: 1px solid $border-color;
  margin: 1.5em 0;
}

a {
  color: $link-color;
  text-decoration: none;
  transition: color 0.2s ease;
  &:hover { color: lighten(#a78bfa, 15%); }
}

.nav { list-style: none; margin: 0; padding: 0; }

iframe, img, embed, object, video { max-width: 100%; }
img[align=left]  { margin-right: 3%; }
img[align=right] { margin-left: 3%; }

.resume { width: 100%; }

// Content wrapper
.content {
  max-width: 960px;
  margin: 0 auto;
  padding: 2rem $padding-x-small * 2;

  @media (max-width: 768px) {
    padding: 1.5rem $padding-x-small;
  }
}

